# video-transcribe-pipeline

./: .gitignore  README.md  audio_extractor.py  audio_extractor_mcp_server.py  audio_transcriber_deepgram.py  main.py  pyproject.toml  retrieve_assemblyAI.py  transcribe_assemblyAI.py  transcribe_mcp_server.py
