[project]
name = "video-transcribe-pipeline"
version = "0.1.0"
description = "Advanced Audio Extraction Pipeline for Video Processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "logging>=0.4.9.6",
    "python-dotenv>=1.1.0",
    "assemblyai>=0.41.1",
    "fastmcp>=2.7.1",
]
